<resources>
    <string name="app_name">Scan</string>
    <string name="login">Login</string>
    <string name="login_text">Please login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_text">Don’t have an account?</string>
    <string name="logout">Logout</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="let_s_started">Let\'s Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account?</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="copyright_2024">Copyright © 2024</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="please_wait">Please Wait…</string>
    <string name="log_in_with_google">Log In with Google</string>
    <string name="or">OR</string>
    <string name="your_web_client_id">597489190587-1gfmgo447bfq16mr3ss5nvjavradr1jl.apps.googleusercontent.com</string>
    <string name="hello">Hello,</string>
    <string name="username">Username</string>
    <string name="featured">Featured</string>
    <string name="camera">Camera</string>
    <string name="image">Image</string>
    <string name="articles">Articles</string>
    <string name="history">History</string>
    <string name="see_all">See all</string>
    <string name="result">Result</string>
    <string name="failed_to_pick_image">Failed to pick image\n</string>
    <string name="empty_image_warning">Please choose the image first</string>
    <string name="categories">Category</string>
    <string name="home">Home</string>
    <string name="settings">Settings\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personalization">Personalization</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="recycle">Recycle\n</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua......</string>
    <string name="percentage">50%</string>
    <string name="recommendation">Recommendation</string>
    <string name="date">Date</string>
    <string name="error_camera_x">Camera failed to initialize</string>
    <string name="image_saved">Image saved\n</string>
    <string name="have_a_waste_nissue">Have a waste\nissue?</string>
    <string name="minimum_characters">Password must be at least 8 characters</string>
    <string name="about">About</string>
    <string name="no_data">No data</string>
    <string name="recommendation_text">Click the BUTTON to find out the location of the nearest waste collector</string>
    <string name="clear_history">Clear all</string>
    <string name="history_empty">Please scan your waste first!</string>
    <string name="welcome">Welcome</string>
    <string name="upload_image">Upload Image</string>
    <string name="author">Author</string>
    <string name="location">Location</string>
    <string name="detection">Detection</string>
    <string name="select_language">Select Languange</string>
    <string name="about_scan">SCAN (Smart Classification with Automated Neural Network) Virtual Waste Manager offers a groundbreaking solution by accurately detecting and categorizing recyclable items. This application harnesses advanced technology, particularly artificial intelligence and machine learning, to streamline waste management processes. This application have a feature like detection image, nearest location, history, articles and multiple language</string>
    <string name="team" translatable="false">Team ID: C241-PS119</string>
    <string name="team_1">- (MD) A298D4KY4248 – Kadek Widiadnyana</string>
    <string name="team_2">- (MD) A298D4KY3945 – Arteddy Rover Bukit</string>
    <string name="team_3">- (ML) M009D4KY2657– Bagus Pandu Wijaya</string>
    <string name="team_4">- (ML) M200D4KY2358 – Rifqi Khairullah Muhamad.</string>
    <string name="team_5">- (ML) M200D4KY3244 – Anggun Sulis Setyawan</string>
    <string name="team_6">- (CC) C009D4KY1124 – Mohammad Robbani</string>
    <string name="team_7">- (CC) C009D4KY0304 – Hilal Rizaki</string>

    <string-array name="waste_labels">
        <item>Battery</item>
        <item>Cardboard</item>
        <item>Clothes</item>
        <item>Glass</item>
        <item>Metal</item>
        <item>Non-Recycle</item>
        <item>Paper</item>
        <item>Plastic</item>
        <item>Shoes</item>
    </string-array>

    <string-array name="waste_descriptions">
        <item>Battery waste consists of used batteries, including rechargeable and single-use batteries. Batteries contain heavy metals and toxic chemicals, such as lead, mercury, cadmium, and lithium, which can be harmful to human health and the environment if not disposed of properly. When batteries are not recycled, they often end up in landfills where these hazardous materials can leach into the soil and water, contaminating ecosystems and posing risks to wildlife and humans. Recycling batteries helps recover valuable metals and reduces the environmental impact of battery disposal.</item>
        <item>Cardboard waste includes corrugated cardboard boxes, packaging materials, and paperboard products. Cardboard is widely used in shipping and packaging industries, resulting in substantial cardboard waste generation. Recycling cardboard conserves natural resources, reduces energy consumption, and minimizes pollution associated with cardboard production. Cardboard recycling also helps reduce landfill space and greenhouse gas emissions, contributing to environmental sustainability and resource conservation.</item>
        <item>Clothing waste comprises garments and textiles that are no longer wanted or needed. The fashion industry generates a significant amount of textile waste due to fast fashion trends and consumerism. Recycling clothes through donation, resale, or textile recycling programs can extend their lifespan and reduce the environmental impact of textile production and disposal. Additionally, donating clothes to charities and thrift stores can benefit communities in need and support sustainable fashion initiatives.</item>
        <item>Glass waste consists of glass containers, bottles, and packaging materials. Glass is infinitely recyclable and can be recycled into new glass products with minimal loss of quality or purity. Glass recycling conserves natural resources, saves energy, and reduces pollution associated with glass production. Additionally, recycling glass helps divert waste from landfills and reduces the environmental impact of glass disposal, making it an environmentally friendly packaging option.</item>
        <item>Metal waste includes ferrous and non-ferrous metals such as aluminum, steel, copper, and brass. Metals are highly recyclable materials that can be melted down and reused in various industrial applications. Metal recycling conserves natural resources, reduces energy consumption, and minimizes greenhouse gas emissions associated with metal production from raw materials. Additionally, recycling metal helps prevent metal pollution and reduces the environmental impact of metal disposal.</item>
        <item>Non-recyclable waste refers to materials that cannot be recycled or are difficult to recycle due to their composition, size, or contamination. Non-recyclable waste includes certain plastics, mixed materials, hazardous waste, and electronic waste. Proper disposal of non-recyclable waste is essential to prevent environmental contamination and public health risks. Depending on the type of waste, disposal methods may include landfilling, incineration, or specialized treatment processes. Minimizing non-recyclable waste generation through waste reduction, reuse, and sustainable product design is crucial for achieving environmental sustainability and resource conservation goals.</item>
        <item>Paper waste encompasses various paper products, including newspapers, magazines, office paper, and cardboard packaging. Paper recycling is an essential part of waste management and resource conservation efforts. Recycling paper helps save trees, conserve water and energy, and reduce pollution associated with paper production. Additionally, paper recycling reduces landfill space and greenhouse gas emissions, making it an environmentally friendly choice for paper disposal.</item>
        <item>Plastic waste comprises a wide range of synthetic polymers used in packaging, consumer products, and industrial applications. Plastic pollution is a significant environmental issue, as plastic waste often ends up in oceans, rivers, and landfills, where it persists for hundreds of years, causing harm to marine life, wildlife, and ecosystems. Recycling plastic helps mitigate plastic pollution, conserve natural resources, and reduce energy consumption associated with plastic production. Additionally, recycling plastic promotes a circular economy model, where plastics are reused, recycled, or repurposed to minimize environmental impact and promote sustainable resource management.</item>
        <item>Shoes waste consists of unwanted or discarded footwear, including shoes, sneakers, and sandals. Shoes are often made from a variety of materials, including leather, rubber, plastic, and textiles, which can be challenging to recycle due to their complex composition. Recycling shoes through donation, resale, or specialized recycling programs can extend their lifespan and reduce the environmental impact of footwear production and disposal. Additionally, donating shoes to charitable organizations can benefit communities in need and promote sustainable consumption and waste reduction.</item>
    </string-array>

</resources>