<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_shape"
    android:elevation="4dp"
    android:padding="16dp"
    android:layout_marginBottom="16dp">

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/empty_image"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:layout_marginStart="1dp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/article_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginStart="1dp"
        android:maxLines="3"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp" />

</LinearLayout>
