<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/result"
            android:fontFamily="@font/poppins_bold"
            android:padding="8dp"
            android:textColor="@color/black"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_clear_24"
            android:layout_marginStart="250dp"
            android:layout_marginTop="15dp"
            android:id="@+id/cancelButton"
            android:contentDescription="@string/result" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="16dp">

        <TextView
            android:id="@+id/profilePicture"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginEnd="16dp"
            android:text="@string/percentage"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:background="@drawable/background_shape" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/resultRecycle"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/recycle"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/resultDescription"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>